# merryn

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  release.yml
merryn/: __init__.py  audio.py  main.py  meeting.py  minutes.py  store.py  update.py  views.py
packaging/: entry.py
tests/: test_smoke.py
tools/: make_hold_music.py
