[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "merryn"
version = "1.0.0"
description = "Discord meeting moderator: speaking queue with enforced muting, agenda tracking, timed anonymous ballots, and deterministic minutes."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "Jay Alderton" }]
keywords = ["discord", "bot", "meeting", "moderation", "voting"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Communications :: Chat",
]
dependencies = [
    # >=2.7 is required: Discord enforces the DAVE E2EE voice protocol
    # since 2026-03-01 and older versions cannot connect to voice at all
    # (ballot hold music needs it).
    "discord.py[voice]>=2.7,<3",
    # Windows has no system timezone database for zoneinfo.
    "tzdata; platform_system == 'Windows'",
]

[project.scripts]
merryn = "merryn.main:run"

[project.urls]
Homepage = "https://github.com/jaldertech/merryn"
Issues = "https://github.com/jaldertech/merryn/issues"

[tool.setuptools]
packages = ["merryn"]

[tool.setuptools.package-data]
merryn = ["assets/*.wav"]
